--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(to left, lightpink, yellow);
+    background: linear-gradient(to left, lightpink, darkred);
     z-index: -1;
 }
 
@@ -67,9 +67,9 @@ section {
 
 .headline {
     position: absolute;
-    top: 70%;
-    left: 10%;
-    font-size: 80px;
+    top: 20%;
+    left: 15%;
+    font-size: 70px;
     transform: translate(-20%, -70%);
     color: white;
     z-index:3;
@@ -89,8 +89,8 @@ section {
 }
 
 .nav {
-    /* display: flex;
-    justify-content: space-around; */
+    display: flex;
+    justify-content: space-around;
     padding-top: 50px;
     padding-bottom: 50px;
     background-color: black ;
