--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ nav {
   height: auto; */ 
    
  width: 100%;
- height: 100%;
+ height: 94%;
  object-fit: cover;
 
 }
@@ -113,4 +113,14 @@ section {
     padding-bottom: 50px;
     background-color: black ;
     color: white;
+}
+
+.tuesday__taco {
+    height: 50%;
+    width:50%;
+}
+
+.tthusday__burito{
+    height:30%;
+    width:30%;
 }
